--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "react-gh-pages-bp",
   "version": "0.1.0",
   "private": true,
-  "homepage": "",
   "dependencies": {
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
@@ -55,8 +54,8 @@
     "start-js": "react-scripts start",
     "start": "npm-run-all -p watch-css start-js",
     "build": "npm run build-css && react-scripts build",
-    "build-css": "node-sass-chokidar src/styles -o src/_styles",
-    "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/_styles --watch --recursive",
+    "build-css": "node-sass-chokidar src/styles/ -o src/_styles",
+    "watch-css": "npm run build-css && node-sass-chokidar src/styles/ -o src/_styles --watch --recursive",
     "deploy": "npm run build&&gh-pages -d build",
     "test": "node scripts/test.js --env=jsdom"
   },
