--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-gh-pages-bp",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
@@ -32,6 +33,7 @@
     "extract-text-webpack-plugin": "1.0.1",
     "file-loader": "0.10.0",
     "fs-extra": "0.30.0",
+    "gh-pages": "^1.0.0",
     "html-webpack-plugin": "2.24.0",
     "http-proxy-middleware": "0.17.3",
     "jest": "18.1.0",
